<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:layout_marginBottom="60sp"
        android:fontFamily="@font/ostrich_regular"
        android:gravity="center"
        android:text="@string/ask_for_number"
        android:textColor="#555555"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/header_decimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ostrich_regular"
        android:gravity="center"
        android:text="@string/decimal"
        android:textAllCaps="true"
        android:textColor="#555555"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/number_decimal"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich_regular"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="25sp"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/header_binary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ostrich_regular"
        android:gravity="center"
        android:text="@string/binary"
        android:textAllCaps="true"
        android:textColor="#555555"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/number_binary"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich_regular"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="25sp"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/header_octal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ostrich_regular"
        android:gravity="center"
        android:text="@string/octal"
        android:textAllCaps="true"
        android:textColor="#555555"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/number_octal"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich_regular"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="25sp"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/header_hexadecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ostrich_regular"
        android:gravity="center"
        android:text="@string/hexadecimal"
        android:textAllCaps="true"
        android:textColor="#555555"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="30sp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/number_hexadecimal"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich_regular"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="25sp"
            tools:ignore="LabelFor,TextFields" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_convert"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="130sp"
            android:layout_marginLeft="130sp"
            android:fontFamily="@font/ostrich_regular"
            android:text="@string/convert"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ostrich_regular"
            android:text="@string/clear"
            android:textAllCaps="true"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>